<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="315dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_box"
    android:backgroundTint="@color/Background"
    android:elevation="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/change"
        android:textColor="@color/mainText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtHeading_ChangeUnitsPopup"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/unitSystem"
        android:textColor="@color/mainText"
        android:textSize="26sp"
        android:textStyle="bold" />

    <View
        android:layout_width="290dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/listDivider"
        android:foreground="@color/grey" />

    <RadioGroup
        android:id="@+id/rgboptions_ChangeUnitsPopup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/imperial" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metric" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel_ChangeUnitsPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_round_corners"
            android:text="@string/cancel"
            app:backgroundTint="@color/red" />

        <Button
            android:id="@+id/btnDone_ChangeUnitsPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:background="@drawable/buttons_round_corners"
            android:text="@string/done"
            app:backgroundTint="@color/blue" />

    </LinearLayout>

</LinearLayout>