<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_box"
    android:backgroundTint="@color/Background"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">


    <TextView
        android:id="@+id/txtName_settings"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Default"
        android:textColor="@color/mainText"
        android:textSize="32sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/bar_1"
        android:layout_width="335dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/txtAccountSettingsHeading"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/AccountHeader"
        android:textColor="@color/mainText" />

    <Button
        android:id="@+id/btnChangeName_settings"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttons_round_corners"
        android:gravity="center|start"
        android:text="@string/changeName"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/grey"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnChangeEmail_settings"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttons_round_corners"
        android:gravity="center|start"
        android:text="@string/changeEmail"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/blue"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnChangePassword_settings"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttons_round_corners"
        android:gravity="center|start"
        android:text="@string/changePassword"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/grey"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/bar_2"
        android:layout_width="335dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/txtAppSettingsHeading"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/AppHeader"
        android:textColor="@color/mainText" />

    <Button
        android:id="@+id/btnChangeUnitSystem_settings"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttons_round_corners"
        android:gravity="center|start"
        android:text="@string/unitSystem"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/blue"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnDarkMode_settings3"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttons_round_corners"
        android:gravity="center|start"
        android:text="@string/darkMode"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="7dp">


        <Switch
            android:id="@+id/swchChangeTheme_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/darkMode"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSignOut_settings"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttons_round_corners"
        android:gravity="center|start"
        android:text="@string/signOut"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/black" />

    <Button
        android:id="@+id/btnDeleteAccount_settings"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttons_round_corners"
        android:gravity="center|start"
        android:text="@string/deleteAccount"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/red" />

</LinearLayout>