<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="135dp"
    android:layout_height="107dp"
    android:background="@drawable/buttons_round_corners"
    android:backgroundTint="@color/Secondary_Background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon_folder"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:background="@drawable/buttons_round_corners"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/cd_FolderIcon"
        android:padding="5dp"
        app:srcCompat="@drawable/ic_baseline_folder_24"
        app:tint="@color/white"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtName_folder"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/Default"
            android:textColor="@color/mainText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNumber_folder"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_gravity="start"
            android:background="@drawable/buttons_circle"
            android:backgroundTint="@color/purple_200"
            android:text="@string/DefaultNum"
            android:textAlignment="center"
            android:textColor="@color/mainText" />
    </LinearLayout>

</LinearLayout>