<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogin_welcome"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogo_welcome" />

    <Button
        android:id="@+id/btnSignup_welcome"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/blue"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnLogin_welcome"
        app:layout_constraintTop_toBottomOf="@+id/btnlogo_welcome" />

    <ImageButton
        android:id="@+id/btnlogo_welcome"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/frontlogo"
        android:contentDescription="@string/cd_Logo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/btnGoogleSignIn_welcome"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:width="60dp"
        android:height="60dp"
        android:backgroundTint="@color/green"
        android:text="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup_welcome"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>